--- a/style.css
+++ b/style.css
@@ -7,12 +7,114 @@
             ont-style: normal;
 }
 
+body{
+    margin: 0px;
+}
+
 #assunto{
     font-family: 'android', Times, sans-serif;
     font-size: 1.5em;
-    font-weight: normal;
+    font-weight: bold;
+    color: #21603D;
 
+
+}
+header{
+    background-image: linear-gradient(to top, #18462c, #5ae496);
+    padding: 10px; 
+    box-shadow: 2px 8px 8px rgba(0, 0, 0, 0.462);
+}
+#cabeca{
+    text-align: center;
+    color: white;
+    padding: 5px;
+}
+#sub{
+    text-align: center;
+    color: white;
+    padding: 5px;
+}
+nav{
+    padding-left: 10px;
+    padding-top: 30px;
+}
+
+nav > a{
+    color: white;
+    text-decoration: none;
+    padding-right: 20px;
+
+}
+
+nav > a:hover{
+    text-decoration: underline;
+    background-color: rgb(22, 99, 55);
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #84E1AD;
+    
+}
+main{
+    background-color: white;
+    padding: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    box-shadow: 1px 8px 10px 1px rgba(0, 0, 0, 0.451);
+}
+
+.topico{
+    background-image:linear-gradient(to right, #C5ECD5, #ffffff41);
+    padding-left: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin: 5px;
+}
+.topico > h2{
+    margin: 0px;
+}
+#bonus{
+    background-color: #C5EBD6;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.458);
+}
+
+h3{
+    background-color: #2FA866;
+    padding: 10px;
+    margin: -10px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    color: white;
+    font-size: 15px;
+}
+#bonus > p{
+    padding: 10px;
+    text-align: justify;
+}
+
+footer{
+    background-color: #1A5C38;
+    padding: 6px;
+    text-align: center;
+    color: white;
+}
+footer > p{
+    margin: 0px;
+}
+a{
+    text-decoration: none;
+    color: #1A5C38;
+    font-weight: bold;
+}
+
+li > a{
+    text-decoration: underline;
+    color: rgb(64, 64, 64);
+}
+span{
+    color: #34714F;
+    font-weight: bold;
 }
