--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,76 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@font-face {
+    font-family: Android;
+    src: url(../fontes/idroid.otf) format(opentype);
+    font-weight: normal;
+}
+
+/*
+    #c5ebd6
+    #83e1ad
+    #3ddc84
+    #2fa866
+    #1a5c37
+    #063d1e
+*/
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+:root{
+   --cor01: #c5ebd6;
+   --cor02: #83e1ad;
+   --cor03: #3ddc84;
+   --cor04: #2fa866;
+   --cor05: #1a5c37;
+   --cor06: #063d1e;
+
+   --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
+   --fonte-destaque: 'Bebas Neue', cursive;
+   --fonte-android: 'Android', cursive;
+
+}
+
 body{
-    background-color: #84E1AD;
+    background-color: var(--cor01);
+    font-family: var(--fonte-padrão);
+}
+
+
+
+header{
+    background-color: var(--cor05);
+}
+
+header > h1{
+    font-family: var(--fonte-destaque);
+    color: white;
+}
+header > p{
+    color: white;
+}
+
+nav{
+    background-color: var(--cor06);
+}
+
+
+main{
+    background-color: white;
+}
+main h1{
+    font-family: var(--fonte-android);
+}
+main h2{
+    font-family: var(--fonte-android);
+}
+
+
+footer{
+    background-color: var(--cor06);
+    color: white;
 }
