--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,13 +60,30 @@ nav{
 
 
 main{
+    min-width: 300px;
+    max-width: 1000px;
     background-color: white;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.512);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 main h1{
     font-family: var(--fonte-android);
 }
 main h2{
     font-family: var(--fonte-android);
+}
+main img.pequena{
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+
+main img{
+    width: 100%;
 }
 
 
