--- a/estilo/style.css
+++ b/estilo/style.css
@@ -32,7 +32,10 @@
    --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
    --fonte-destaque: 'Bebas Neue', cursive;
    --fonte-android: 'Android', cursive;
+}
 
+a.externo::after{
+    content: '\00A0\1F517';
 }
 
 body{
@@ -43,19 +46,50 @@ body{
 
 
 header{
-    background-color: var(--cor05);
+    background-image: linear-gradient(to bottom, var(--cor03), var(--cor06));
+    text-align: center;
+    min-height: 150px;
+    padding-top: 40px;
 }
 
 header > h1{
     font-family: var(--fonte-destaque);
     color: white;
+    font-size: 3em;
+    font-weight: normal;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.624);
 }
 header > p{
     color: white;
+    font-family: var(--fonte-padrão);
+    font-size: 1em;
+    max-width: 600px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: auto;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.624);
 }
 
 nav{
     background-color: var(--cor06);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.516);
+}
+nav > a{
+    color: var(--cor02);
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    transition-duration: 0.5s;
+}
+nav >a:hover{
+    background-color: var(--cor05);
+    color: white;
+    border-radius: 7px;
 }
 
 
@@ -72,22 +106,110 @@ main{
 }
 main h1{
     font-family: var(--fonte-android);
+    font-weight: normal;
+    font-size: 1.8em;
+    color: var(--cor06);
 }
 main h2{
     font-family: var(--fonte-android);
+    color: var(--cor05);
+    font-size: 1.3em;
+    font-weight: normal;
+    background-image: linear-gradient(to right, var(--cor01), transparent);
+    text-indent: 8px;
 }
+
+main p{
+    margin: 15px 0px;
+    text-align: justify;
+    font-size: 1em;
+    line-height: 2em;
+    text-indent: 30px;
+}
+main a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor04);
+}
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor02);
+}
+
+main strong{
+    color: var(--cor04);
+    font-weight: bold;
+    padding: 1px 1px;
+}
+
 main img.pequena{
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
-
 main img{
     width: 100%;
 }
 
 
+div.video{
+    background-color: var(--cor06);
+    padding: 20px;
+    margin: 0px -20px 30px -20px;
+    padding-bottom: 56.4%;
+    position: relative;
+}
+div.video > iframe{
+    align-items: center;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+
+aside{
+    background-color: var(--cor01);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.219);
+}
+aside > h3{
+color: white;
+background-color: var(--cor05);
+padding: 10px;
+margin: -10px -10px 0 -10px;
+border-radius: 10px 10px 0px 0px;
+}
+aside > ul{
+    list-style-position: inside;
+    list-style-type: '\00A0\00A0\2714';
+    padding-left: 20px;
+    columns: 2;
+    padding-left: 5px;
+}
+
+aside p{
+    padding-left: 5px;
+    padding-right: 5px;
+}
 footer{
+    font-family: var(--fonte-padrão);
     background-color: var(--cor06);
     color: white;
+    text-align: center;
+    font-size: 0.9em;
+    padding: 10px;
+}
+footer a{
+    text-decoration: none;
+    font-weight: bold;
+    padding-left: 2px;
+    padding-right: 2px;
+    color: white;
+}
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor02);
 }
